--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 <body>
 
 <header>
-  <img src="c:\Users\johan\Downloads\OIP (1).jpeg" alt="Your Ghee Store Logo">
+  
   <h1>PAVIZHAM GHEE STORE</h1>
   <p>www.PAVIZHAMghee.com</p>
 </header>
@@ -120,7 +120,7 @@
 </div>
 
 <footer>
-  <p>&copy; 2024 Your Ghee Store. All rights reserved.</p>
+  <p>&copy; 2024 pavizhamghee. All rights reserved.</p>
 </footer>
 
 <script>
